# subgraphdb

./: .gitignore  Cargo.toml  GRAPHS.md  README.md  SYNTAX.md  code_of_conduct.md  pages.md
adjacency_matrix/: Cargo.toml
api/src/: lib.rs
binary/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
cmd/: Cargo.toml
cmd/src/: lib.rs
cmd/src/transaction/: mod.rs
common/src/: lib.rs
datagram/: Cargo.toml  lib.rs
datagram/src/: lib.rs
datagram/src/dg_utils/: mod.rs
datagram/src/enums/: mod.rs
datagram/src/pages/: mod.rs
datagram/src/rows/: mod.rs
datagram/src/structs/: mod.rs
datagram/test_data/: new_sf_db.sdb  sf_db_10_ref.sdb  sf_db_1_ref.sdb
datagramv2/: Cargo.toml
datagramv2/src/: lib.rs
datagramv2/src/constants/: mod.rs
datagramv2/src/dg_utils/: mod.rs
datagramv2/src/grams/: mod.rs
datagramv2/src/rows/: mod.rs
db/src/: lib.rs
executor/: Cargo.toml
executor/src/: lib.rs
executor/src/core/: mod.rs
executor/src/core_planner/: mod.rs
executor/src/reader/: mod.rs
executor/src/reader/simple_match/: mod.rs
executor/src/writer/: mod.rs
executor/src/writer/core/: mod.rs
executor/src/writer/new_db/: mod.rs
executor/src/writer/new_graph/: mod.rs
executor/src/writer/update_graph/: mod.rs
fdm/: Cargo.toml
fdm/src/: lib.rs
graph/: Cargo.toml
graph/src/: graph_utils.rs  lib.rs
graph/src/model/: edge.rs  graph.rs  node.rs
parser/: Cargo.toml
parser/src/: lib.rs
planner/: Cargo.toml
planner/src/: lib.rs
sdb/: Cargo.toml
sdb/src/: lib.rs
sdb/src/enums/: mod.rs
sdb/src/traits/: mod.rs
sdb_config/: Cargo.toml
sdb_config/src/: lib.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cmd/: mod.rs
src/cmd/transaction/: mod.rs
src/common/: mod.rs
src/common/kvps/: mod.rs
src/common/validators/: mod.rs
src/datagramv2/: mod.rs
src/datagramv2/dg_utils/: mod.rs
src/datagramv2/external_grams/: mod.rs
src/datagramv2/grams/: mod.rs
src/datagramv2/internal_grams/: mod.rs
src/executor/: mod.rs
src/graph/: mod.rs
src/parser/: mod.rs
src/planner/: mod.rs
src/sdb/: mod.rs
src/sdb_config/: mod.rs
src/tokenize/: mod.rs
src/utils/: mod.rs
test_data/: new.sdb  new_with_data_page.sdb  no_graphs.sdb  test_testing.sdb  tmp_db4.sdb  tmp_se1a.sdb  tmp_sf_db_2.sdb
tests/: integration_tests.rs  story_tests.rs
token/src/: lib.rs
tokenize/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+17 files in other folders)
