[package]
name = "subgraphdb"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "./common" }
sdb = { path = "./sdb" }
sdb_config = { path = "./sdb_config" }
cli = { path = "./cli" }
datagram = { path = "./datagram" }
planner = { path = "./planner" }

[workspace]
members = [ "common", "sdb", "sdb_config", "cli", "datagram" , "graph", "api", "utils", "cmd", "planner", 
"executor", "parser", "tokenize"]
