[package]
name = "subgraphdb"
version = "0.2.0"
edition = "2024"
authors = ["Chris Myers <christopherbm@gmail.com>"]
categories = ["database", "graph", "data"]
description = "A flat-file graph database"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/subgraphdb/subgraphdb"

[dependencies]

[dependencies.uuid]
version = "1.17.0"
features = [ "v4" ]